# inductiva

./: .buildinfo  .editorconfig  .gitignore  .pylintrc  .readthedocs.yml  CNAME  CODE_OF_CONDUCT.md  Home.html  MANIFEST.in  README.md  branch_name.txt  cli.html  conda.yml  example_test.py  first_example.html  genindex.html  index.html  installation.html  markdown_sample.html  mypy.ini  objects.inv  proj.py  requirements.txt  scale-and-organize.md  search.html  searchindex.js  setup.cfg  setup.py  swash_test.py  task_state_diagram.html  test.py  test_2.py  test_api.ipynb  test_cycles.py  uninstall_inductiva.html
.doctrees/: Home.doctree  cli.doctree  environment.pickle  first_example.doctree  index.doctree  installation.doctree  task_state_diagram.doctree  uninstall_inductiva.doctree
.openapi-generator/: FILES
_sources/: Home.md  cli.md  installation.md  markdown_sample.md
api_reference/: faq.html  glossary.html  troubleshooting.html  user_quotas.html
cli/: logs.html  overview.html  resources.html  storage.html  streaming-logs.html  tasks.html  tracking-tasks.html
computational_resources/: compute_janitor.html  elasticgroup_class.html  index.html  machinegroup_class.html  mpicluster_class.html
demos/: dam_break_sim.ipynb  dam_break_simulation.py  dambreak_simulation.py  demo.py  demos.ipynb  dualsphysics_sim.ipynb  dualsphysics_simulation.py  eigensolver.py  eigensolver_cupy.ipynb  eigensolver_cupy.py  eigensolver_slepc.ipynb  fluid_tank_simulation.py  generic_simulation.py  kill.py  matmul.py  splishsplash_sim.ipynb  splishsplash_simulation.py  sum.py  swash_simulation.py  utils.py
docs/: .env  .htaccess  .markdownlint.json  API-access-tokens.md  CLI.md  Computational Resources.md  Data Flow.md  Getting Started.md  Home.md  Install.md  Ivan_CLI.md  Ivan_Computational_Resources.md  MPI Cluster.md  MPI_Cluster.md  Machine Groups.md  Machines.md  README.md  Resource Features.md  Running-multiple-simulations-in-parallel.md  Scenarios.md  Simulators.md  Start-simulating.md  Storage.md  Tasks.md  Templating.md  Troubleshooting Guide.md  User Quotas.md  _Footer.md  _Sidebar.md  computational_resources_overview.md  conf.py  conftest.py  data_flow.md  elasticgroup_class.md  first_example.md  getting_started.md  index.md  installation.md  machinegroup_class.md  markdown_sample.md  (+10 more)
docs-sources/: README.md  menu.json  requirements.txt
examples/: run_parallel_and_cleanup.py
explore_api/: configuring-simulators.html  shared_dedicated_resources.html  tasks.html  templating.html
get_started/: installation.html
how_to/: elastic_machine_group.html  index.html  manage_and_retrieve_results.html  manage_computational_resources.html  manage_tasks.html  mpi_cluster.html  parallel_simulations.html  set-up-elastic-machine-group.html  set-up-mpi-cluster.html  storage.html
inductiva/: __init__.py  api.py  client_README.md  config.py  constants.py  design.py  dummy.py  exceptions.py  linalg.py  math.py  openfoam.py  output_consts.py  scenarios.py  sph.py  swash.py  types.py
inductiva_examples/: cans.py  cm1.py  gx.py  openfast.py  splishsplash.py
introduction/: data_flow.html  index.html  infrastructure.html  shared_dedicated_resources.html  simulators.html  tasks.html  templating.html
(+3660 files in other folders)
