[metadata]
name = inductiva
version = attr: inductiva.__version__
description = Python client for the Inductiva API
long_description = file: README.md
long_description_content_type = text/markdown
author = Inductiva Research Labs
author_email = contact@inductiva.ai
url = https://github.com/inductiva/inductiva
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
  certifi >= 14.5.14
  frozendict
  setuptools >= 21.0.0
  typing-extensions
  urllib3
  python-dateutil
  jinja2
  tabulate
  tqdm
  websocket-client
  fsspec
  requests
  aiohttp
  aiortc
  nest_asyncio

[options.extras_require]
task-runner =
  docker
aws =
  awscli
  boto3

[options.package_data]
inductiva = assets/**
inductiva.localization =
  translations/**
inductiva.resources =
  machine_types.yaml

[options.packages.find]
exclude =
  tests
  tests.*

[options.entry_points]
console_scripts =
  inductiva = inductiva._cli:main
