[metadata]
name = inductiva
version = attr: inductiva.__version__
description = Python client for the Inductiva API
long_description = file: README.md
long_description_content_type = text/markdown
author = Inductiva Research Labs
author_email = contact@inductiva.ai
url = https://github.com/inductiva/inductiva
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
  jinja2
  tabulate
  tqdm
  websocket-client
  fsspec
  requests
  aiohttp
  aiortc
  nest_asyncio
  # openapi client requirements
  urllib3 >= 2.1.0, < 3.0.0
  python-dateutil >= 2.8.2
  pydantic >= 2
  typing-extensions >= 4.7.1


[options.extras_require]
task-runner =
  docker
aws =
  awscli
  boto3

[options.package_data]
inductiva = assets/**
inductiva.localization =
  translations/**
inductiva.resources =
  machine_types.yaml

[options.packages.find]
exclude =
  tests
  tests.*

[options.entry_points]
console_scripts =
  inductiva = inductiva._cli:main
